--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 These items need to be completed before the end of this quarter:
 1. Integration testing 
-Functional testing
+2. Functional testing
+3. System testing
