--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,4 @@ These items need to be completed before the end of this quarter:
 1. Integration testing 
 2. Functional testing
 3. System testing
+4. Deployment procedures
