--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,4 @@ These items need to be completed before the end of this quarter:
 2. Functional testing
 3. System testing
 4. Deployment procedures
+5. Cutover procedure
